Apenas umas informações a mais.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 
         <img src="img/gccsd.png" alt="GCCSD" />
 
-        <p>Conheça a nossa <a href="https://groups.google.com/forum/?fromgroups#!forum/gcc-sd" title="Lista no Google Groups"> lista de discussão</a>.</p>
+        <p>
+            Somos um grupo de pessoas apaixonadas por <strong>software livre</strong> e que gosta de compartilhar conhecimento. 
+        </p>
+
+        <p>Logo teremos mais informações sobre o grupo aqui nesta página.</p>
+
+        <p>
+            Conheça a nossa
+            <a href="https://groups.google.com/forum/?fromgroups#!forum/gcc-sd" title="Lista no Google Groups"> lista de discussão</a>.
+            E faça parte do GCCSD.
+        </p>
     </body>
 </html>
