Pequenas modificações emtemplate e texto.

--- a/index.html
+++ b/index.html
@@ -5,24 +5,30 @@
         
         <meta charset="utf-8">
 
+        <link href='http://fonts.googleapis.com/css?family=Judson' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/normalize.min.css" />
         <link rel="stylesheet" type="text/css" href="css/gccsd.css" />
     </head>
     <body>
-        <h1>Grupo de Compartilhamento do Conhecimento Santos Dumont</h1>
+        <div id="corpo">
+            <h1>Grupo de Compartilhamento do Conhecimento Santos Dumont</h1>
 
-        <img src="img/gccsd.png" alt="GCCSD" />
+            <img src="img/gccsd.png" alt="GCCSD" />
 
-        <p>
-            Somos um grupo de pessoas apaixonadas por <strong>software livre</strong> e que gosta de compartilhar conhecimento. 
-        </p>
+            <p>
+                O <strong>GCC-SD</strong> é um grupo de pessoas interessadas em discutir e promover o software livre.
+            </p>
+            <p>
+                Somos apaixonados por tecnologia e acreditamos no potencial do <strong>Software Livre</strong> como
+                opção viável mais estável e segura para todo tipo de aplicação e da sua importância
+                para uma sociedade mais justa.
+            </p>
 
-        <p>Logo teremos mais informações sobre o grupo aqui nesta página.</p>
-
-        <p>
-            Conheça a nossa
-            <a href="https://groups.google.com/forum/?fromgroups#!forum/gcc-sd" title="Lista no Google Groups"> lista de discussão</a>.
-            E faça parte do GCCSD.
-        </p>
+            <p>
+                Conheça a nossa
+                <a href="https://groups.google.com/forum/?fromgroups#!forum/gcc-sd" title="Lista no Google Groups">lista de discussão</a>.
+                e faça parte do GCC-SD.
+            </p>
+        </div><!-- corpo -->
     </body>
 </html>
