Pequenas adições de textos.

--- a/index.html
+++ b/index.html
@@ -25,10 +25,22 @@
             </p>
 
             <p>
+                Temos uma lista de discussão online que é o nosso principal meio de comunicação. Mas o grupo também costuma
+                se reunir uma vez por mês para trocar conhecimentos e botar o papo em dia. Em nossas reuniões costumamos
+                fazer palestras sobre temas variados, mas em geral ligados, de alguma forma, ao mundo do software livre e da
+                cultura digital.
+            </p>
+
+            <p>
                 Conheça a nossa
                 <a href="https://groups.google.com/forum/?fromgroups#!forum/gcc-sd" title="Lista no Google Groups">lista de discussão</a>.
                 e faça parte do GCC-SD.
             </p>
+
+            <p>
+                Encontre o GCC-SD também no <a href="https://twitter.com/#!/gccsd" title="GCC-SD no Twitter" />Twitter</a> e no
+                <a href="https://www.facebook.com/pages/GCC-Santos-Dumont/185951881417337" title="GCC-SD no Facebook">Facebook</a>.
+
         </div><!-- corpo -->
     </body>
 </html>
