Adicionado um topo.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 
         <link href='http://fonts.googleapis.com/css?family=Judson' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/normalize.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/gccsd.css" />
+        <link rel="stylesheet" type="text/css" href="css/gccsd2.css" />
     </head>
     <body>
         <div id="corpo">
+            <img src="img/topo.jpg" alt="GCCSD Palestra" />
             <h1>Grupo de Compartilhamento do Conhecimento Santos Dumont</h1>
 
             <img src="img/gccsd.png" alt="GCCSD" />
