Adicionando referencia ao Google+

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             </p>
 
             <p>
-                Encontre o GCC-SD também no <a href="https://twitter.com/#!/gccsd" title="GCC-SD no Twitter" />Twitter</a> e no
-                <a href="https://www.facebook.com/pages/GCC-Santos-Dumont/185951881417337" title="GCC-SD no Facebook">Facebook</a>.
+                Encontre o GCC-SD também no <a href="https://plus.google.com/105506200769953343106" title="GCCSD no Google+">Google+</a>, <a href="https://www.facebook.com/pages/GCC-Santos-Dumont/185951881417337" title="GCC-SD no Facebook">Facebook</a> e <a href="https://twitter.com/#!/gccsd" title="GCC-SD no Twitter" />Twitter</a>.
+			</p>
 
         </div><!-- corpo -->
     </body>
