--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
         
         <meta charset="utf-8">
 
-        <link href='http://fonts.googleapis.com/css?family=Judson' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/normalize.min.css" />
         <link rel="stylesheet" type="text/css" href="css/gccsd2.css" />
     </head>
     <body>
         <div id="corpo">
-            <img src="img/topo.jpg" alt="GCCSD Palestra" />
+            <img src="img/gccsd.png" alt="GCCSD" />
+
             <h1>Grupo de Compartilhamento do Conhecimento Santos Dumont</h1>
 
-            <img src="img/gccsd.png" alt="GCCSD" />
+            <img src="img/topo.jpg" alt="GCCSD Palestra" />
 
             <p>
                 O <strong>GCC-SD</strong> é um grupo de pessoas interessadas em discutir e promover o software livre.
             </p>
+
             <p>
                 Somos apaixonados por tecnologia e acreditamos no potencial do <strong>Software Livre</strong> como
                 opção viável mais estável e segura para todo tipo de aplicação e da sua importância
@@ -41,7 +42,7 @@
             <p>
                 Encontre o GCC-SD também no <a href="https://twitter.com/#!/gccsd" title="GCC-SD no Twitter" />Twitter</a> e no
                 <a href="https://www.facebook.com/pages/GCC-Santos-Dumont/185951881417337" title="GCC-SD no Facebook">Facebook</a>.
-
-        </div><!-- corpo -->
+            </p>
+        </div>
     </body>
 </html>
