--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
         
         <meta charset="utf-8">
 
-        <link rel="stylesheet" type="text/css" href="css/normalize.min.css" />
         <link rel="stylesheet" type="text/css" href="css/gccsd2.css" />
     </head>
     <body>
-        <div id="corpo">
+        <header>
             <img src="img/gccsd.png" alt="GCCSD" />
 
-            <h1>Grupo de Compartilhamento do Conhecimento Santos Dumont</h1>
+            <h1>
+                Grupo de Compartilhamento do Conhecimento 
+                Santos Dumont
+            </h1>
 
-            <img src="img/topo.jpg" alt="GCCSD Palestra" />
+            <img src="img/topo.jpg" width="700" height="248" alt="GCCSD Palestra" />
+        </header>
 
+        <article>
             <p>
                 O <strong>GCC-SD</strong> é um grupo de pessoas interessadas em discutir e promover o software livre.
             </p>
@@ -32,17 +36,26 @@
                 fazer palestras sobre temas variados, mas em geral ligados, de alguma forma, ao mundo do software livre e da
                 cultura digital.
             </p>
+        </article>
 
+        <footer>
             <p>
-                Conheça a nossa
-                <a href="https://groups.google.com/forum/?fromgroups#!forum/gcc-sd" title="Lista no Google Groups">lista de discussão</a>.
-                e faça parte do GCC-SD.
+                Conheça-nos e faça parte do GCC-SD:                
             </p>
 
-            <p>
-                Encontre o GCC-SD também no <a href="https://twitter.com/#!/gccsd" title="GCC-SD no Twitter" />Twitter</a> e no
-                <a href="https://www.facebook.com/pages/GCC-Santos-Dumont/185951881417337" title="GCC-SD no Facebook">Facebook</a>.
-            </p>
-        </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="https://groups.google.com/forum/?fromgroups#!forum/gcc-sd" title="Lista no Google Groups">lista de discussão</a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/#!/gccsd" title="GCC-SD no Twitter">Twitter</a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/pages/GCC-Santos-Dumont/185951881417337" title="GCC-SD no Facebook">Facebook</a>
+                    </li>
+                </ul>
+            </nav>
+        </footer>
     </body>
 </html>
