Alterado a imagem padrão conforme sugestão do PageSpeed.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <figure>
-                <img src="img/gccsd.png" alt="GCC-SD" />
+                <img src="img/gccsd1.png" alt="GCC-SD" />
             </figure>
 
             <hgroup>
