Adicionado humans.txt e alterado o link para o facebook.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/pages/GCC-Santos-Dumont/185951881417337" title="GCC-SD no Facebook">
+                        <a href="https://www.facebook.com/gccsd" title="GCC-SD no Facebook">
                             Facebook
                         </a>
                     </li>
