Utilizando lista.gccsd.com.br para link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="https://groups.google.com/forum/?fromgroups#!forum/gcc-sd" title="Lista no Google Groups">
+                        <a href="http://lista.gccsd.com.br" title="Lista no Google Groups">
                             lista de discussão
                         </a>
                     </li>
