--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>GCC-SD | Grupo do Compartilhamento do Conhecimento - Santos Dumont</title>
         
         <link rel="stylesheet" type="text/css" href="css/gccsd2.css" />
+	<link rel="icon" type="image/png" href="img/favicon.png" />
     </head>
     <body>
         <header>
