Adicionado página de ações; alterado css

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <header>
 	    <nav class="navBar">
 		<ul>
-		    <li><a href="#">Início</a></li>
-		    <li><a href="#">Ações</a></li>
+		    <li><a href="index.html">Início</a></li>
+		    <li><a href="acoes.html">Ações</a></li>
 		</ul>
 	    </nav>
 
