Algumas melhorias na acessibilidade.
Adicionei um link para pular para o conteúdo.
Adicionei melhores descrições para as imagens.
Aumentei o contraste entre a cor de fundo e a cor do texto.

Segui as regras do WCAG (Web Content Acessibility Guidelines), aqui
https://www.w3.org/WAI/intro/wcag

--- a/index.html
+++ b/index.html
@@ -5,79 +5,78 @@
         <meta name="viewport" content="width=device-width">
 
         <title>GCC-SD | Grupo do Compartilhamento do Conhecimento - Santos Dumont</title>
-        
+
         <link rel="stylesheet" type="text/css" href="css/gccsd2.css" />
-	<link rel="icon" type="image/png" href="img/favicon.png" />
+        <link rel="icon" type="image/png" href="img/favicon.png" />
     </head>
+
     <body>
+        <a href="#conteudo_principal" title="pular para o conteúdo principal" class="acessibilidade">Pular para o conteúdo principal</a>
         <header>
-	    <nav class="navBar">
-		<ul>
-		    <li><a href="index.html">Início</a></li>
-		</ul>
-	    </nav>
+            <nav class="navBar">
+                <ul>
+                    <li><a href="index.html" title="Página inicial do GCC-SD">Início</a></li>
+                </ul>
+            </nav>
 
             <figure>
-                <img src="img/gccsd1.png" alt="GCC-SD" />
+                <img src="img/gccsd1.png" alt="O logotipo do GCC-SD apresentando as letras e um desenho do chapéu de Santos Dumont" />
             </figure>
 
             <hgroup>
-                <h1>Grupo de Compartilhamento do Conhecimento</h1>
-                <h2>Santos Dumont</h2>
+                <h1>Grupo de Compartilhamento do Conhecimento Santos Dumont</h1>
             </hgroup>
 
             <figure id="imagem-destque">
-                <img src="img/topo.jpg" alt="GCCSD Palestra do Kretcheu" />   
+                <img src="img/topo.jpg" alt="
+                    Nesta foto um dos membros do GCC-SD está apresentando uma palestra.
+                    No slide atual é possível ver que ele fala sobre as quatro liberdades do software livre.
+                    "
+                />
             </figure>
         </header>
 
-        <article>
+        <article id="conteudo_principal">
             <p>
-                O <strong>GCC-SD</strong> é um grupo de pessoas interessadas 
+                O <strong>GCC-SD</strong> é um grupo de pessoas interessadas
                 em discutir e promover o software livre.
             </p>
 
             <p>
-                Somos apaixonados por tecnologia e acreditamos no potencial do 
-                <strong>Software Livre</strong> como opção viável mais estável 
+                Somos apaixonados por tecnologia e acreditamos no potencial do
+                <strong>Software Livre</strong> como opção viável mais estável
                 e segura para todo tipo de aplicação e da sua importância
                 para uma sociedade mais justa.
             </p>
 
             <p>
-                Temos uma lista de discussão online que é o nosso principal 
-                meio de comunicação. Mas o grupo também costuma se reunir 
-                uma vez por mês para trocar conhecimentos e botar o papo em 
-                dia. Em nossas reuniões costumamos fazer palestras sobre temas 
-                variados, mas em geral ligados, de alguma forma, ao mundo do 
+                Temos uma lista de discussão online que é o nosso principal
+                meio de comunicação. Mas o grupo também costuma se reunir
+                uma vez por mês para trocar conhecimentos e botar o papo em
+                dia. Em nossas reuniões costumamos fazer palestras sobre temas
+                variados, mas em geral ligados, de alguma forma, ao mundo do
                 software livre e da cultura digital.
             </p>
         </article>
 
         <footer>
             <p>
-                Conheça-nos e faça parte do GCC-SD:                
+                Conheça-nos e faça parte do GCC-SD
             </p>
 
             <nav>
                 <ul>
                     <li>
-                        <a href="http://lista.gccsd.com.br" title="Lista no Google Groups">
-                            lista de discussão
-                        </a>
+                        <a href="http://lista.gccsd.com.br" title="Lista de discussão no Google Groups">lista de discussão</a>
                     </li>
                     <li>
                         <a href="https://plus.google.com/communities/103444189478835360319" title="GCCSD no Google+">Google+</a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/#!/gccsd" title="GCC-SD no Twitter">
-                            Twitter
-                        </a>
+                        <a href="https://twitter.com/#!/gccsd" title="Perfil do GCC-SD no Twitter">Twitter</a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/gccsd" title="GCC-SD no Facebook">
-                            Facebook
-                        </a>
+                        <a href="https://www.facebook.com/gccsd" title="Página do GCC-SD no Facebook">Facebook</a>
                     </li>
                 </ul>
             </nav>
